chore(playground): fix focus styling being cut off
affects: @entur/documentation

--- a/apps/documentation/src/components/playground/Playground.scss
+++ b/apps/documentation/src/components/playground/Playground.scss
@@ -15,6 +15,7 @@
     }
   }
   &__live-preview {
+    padding: 0.5rem;
     width: 100%;
     height: 100%;
     display: flex;
